objects/Negotiator_3__c/Negotiator_3__c.object-meta.xml
<CustomObject>
    <label>Negotiator 3</label>
    <nameField>
        <label>Negotiator 3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Negotiator 3</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>