objects/Negotiator_3__c/fields/Customer_Price1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price1__c</fullName>
    <label>Customer Price1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>