objects/Negotiator_3__c/fields/Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price__c</fullName>
    <formula>Quote_Line__r.SBQQ__ListPrice__c - ( Additional_Discount__c *  Quote_Line__r.SBQQ__ListPrice__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>