objects/Negotiator_3__c/fields/Invoice_Price1__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Price1__c</fullName>
    <label>Invoice Price1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>