objects/Negotiator_3__c/fields/List_Price1__c.field-meta.xml
<CustomField>
    <fullName>List_Price1__c</fullName>
    <label>List Price1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>