objects/Negotiator_3__c/fields/Local_Factor_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Local_Factor_Adjustment__c</fullName>
    <label>Local Factor Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>