objects/Negotiator_3__c/fields/Net_Price1__c.field-meta.xml
<CustomField>
    <fullName>Net_Price1__c</fullName>
    <label>Net Price1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>