objects/Negotiator_3__c/fields/Other_Services_Charge__c.field-meta.xml
<CustomField>
    <fullName>Other_Services_Charge__c</fullName>
    <label>Other Services Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>