objects/Negotiator_3__c/fields/Partner_Channel_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Channel_Discount__c</fullName>
    <label>Partner Channel Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>