objects/Negotiator_3__c/fields/Pocket_Margin__c.field-meta.xml
<CustomField>
    <fullName>Pocket_Margin__c</fullName>
    <formula>Pocket_Price__c - Standard_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pocket Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>