objects/Negotiator_3__c/fields/Revenue_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Rebate__c</fullName>
    <label>Revenue Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>